--- a/device/etc/device.yaml
+++ b/device/etc/device.yaml
@@ -4,6 +4,11 @@ Etcd:
   Hosts:
   - 192.168.101.50:2379
   Key: device.rpc
+RpcCli:
+  Etcd:
+    Hosts:
+      - 192.168.101.50:2379
+    Key: device.rpc
 Mqtt:
   Broker: tcp://192.168.101.50:1883
   ClientID: "go-mqtt-server-client-id"
